--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
 
         .btn-orange {
-            background-color: #FF6B00;
+            background-color: #FF8C00;
             color: white;
             transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
@@ -80,7 +80,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background-color: #FF6B00;
+            background-color: #FF8C00;
             z-index: 9999;
             pointer-events: none;
         }
@@ -223,35 +223,35 @@
         <div class="marquee-container relative flex items-center">
             <div id="marquee-track" class="marquee-track flex items-center gap-32 px-16">
                 <span
-                    class="text-4xl font-heading font-black italic text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Emirates</span>
+                    class="text-4xl font-heading font-black italic text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Emirates</span>
                 <span
-                    class="text-4xl font-black tracking-tighter uppercase text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Qatar
+                    class="text-4xl font-black tracking-tighter uppercase text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Qatar
                     Airways</span>
                 <span
-                    class="text-4xl font-bold tracking-widest text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">ETIHAD</span>
+                    class="text-4xl font-bold tracking-widest text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">ETIHAD</span>
                 <span
-                    class="text-4xl font-heading underline text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Singapore
+                    class="text-4xl font-heading underline text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Singapore
                     Airlines</span>
                 <span
-                    class="text-4xl font-black italic text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Lufthansa</span>
+                    class="text-4xl font-black italic text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Lufthansa</span>
                 <span
-                    class="text-4xl font-black uppercase text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Turkish
+                    class="text-4xl font-black uppercase text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Turkish
                     Airlines</span>
                 <!-- Duplicate for seamless loop -->
                 <span
-                    class="text-4xl font-heading font-black italic text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Emirates</span>
+                    class="text-4xl font-heading font-black italic text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Emirates</span>
                 <span
-                    class="text-4xl font-black tracking-tighter uppercase text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Qatar
+                    class="text-4xl font-black tracking-tighter uppercase text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Qatar
                     Airways</span>
                 <span
-                    class="text-4xl font-bold tracking-widest text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">ETIHAD</span>
+                    class="text-4xl font-bold tracking-widest text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">ETIHAD</span>
                 <span
-                    class="text-4xl font-heading underline text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Singapore
+                    class="text-4xl font-heading underline text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Singapore
                     Airlines</span>
                 <span
-                    class="text-4xl font-black italic text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Lufthansa</span>
+                    class="text-4xl font-black italic text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Lufthansa</span>
                 <span
-                    class="text-4xl font-black uppercase text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF6B00] transition-all cursor-default">Turkish
+                    class="text-4xl font-black uppercase text-[#00143D] opacity-20 hover:opacity-100 hover:text-[#FF8C00] transition-all cursor-default">Turkish
                     Airlines</span>
             </div>
         </div>
@@ -262,7 +262,7 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="flex justify-between items-end mb-24 reveal-up">
                 <div class="space-y-4">
-                    <p class="text-[11px] font-black tracking-[0.5em] text-[#FF6B00] uppercase">Premium
+                    <p class="text-[11px] font-black tracking-[0.5em] text-[#FF8C00] uppercase">Premium
                         Inventory</p>
                     <h2 class="text-7xl font-heading font-black italic text-[#00143D]">Bento <span
                             class="not-italic text-[#00143D]/20">Selected.</span></h2>
@@ -283,7 +283,7 @@
                         alt="Dubai Package">
                     <div class="absolute bottom-12 left-12 z-20 space-y-4">
                         <span
-                            class="bg-[#FF6B00] text-white px-5 py-2 rounded-full text-[10px] font-black tracking-widest uppercase">Featured
+                            class="bg-[#FF8C00] text-white px-5 py-2 rounded-full text-[10px] font-black tracking-widest uppercase">Featured
                             Deployment</span>
                         <h3 class="text-5xl font-heading font-black italic text-white">The Dubai <br>
                             Nautical Elite.
@@ -304,7 +304,7 @@
                 </div>
                 <div class="bento-item-wide bg-[#00143D] rounded-[48px] p-12 reveal-up relative overflow-hidden group">
                     <div class="relative z-10 flex flex-col justify-between h-full">
-                        <div class="text-[10px] font-black tracking-[0.4em] text-[#FF6B00] uppercase">Live
+                        <div class="text-[10px] font-black tracking-[0.4em] text-[#FF8C00] uppercase">Live
                             Metrics</div>
                         <div class="text-4xl font-heading font-black italic text-white">"Luxury isn't a
                             place, <br> it's
@@ -317,7 +317,7 @@
                         </div>
                     </div>
                     <div
-                        class="absolute -right-20 -bottom-20 w-80 h-80 bg-[#FF6B00]/10 rounded-full blur-[80px] group-hover:bg-[#FF6B00]/20 transition-all duration-1000">
+                        class="absolute -right-20 -bottom-20 w-80 h-80 bg-[#FF8C00]/10 rounded-full blur-[80px] group-hover:bg-[#FF8C00]/20 transition-all duration-1000">
                     </div>
                 </div>
                 <div class="bg-white rounded-[48px] overflow-hidden group relative reveal-up">
@@ -340,14 +340,14 @@
             <div class="flex flex-col md:flex-row justify-between items-start gap-20 mb-32">
                 <div class="max-w-md">
                     <span class="text-5xl font-black tracking-tighter italic text-white mb-10 inline-block">CK<span
-                            class="text-[#FF6B00] not-italic">.</span></span>
+                            class="text-[#FF8C00] not-italic">.</span></span>
                     <p class="text-slate-500 text-lg leading-relaxed font-medium">Revisiting the golden age
                         of travel
                         with modern nautical precision. Secure your passage into the new world.</p>
                 </div>
                 <div class="grid grid-cols-2 lg:grid-cols-3 gap-24">
                     <div class="space-y-8">
-                        <h4 class="text-[10px] font-black tracking-[0.5em] uppercase text-[#FF6B00]">The Map
+                        <h4 class="text-[10px] font-black tracking-[0.5em] uppercase text-[#FF8C00]">The Map
                         </h4>
                         <div class="flex flex-col gap-5 text-sm font-bold text-slate-400">
                             <a href="flights.html" class="hover:text-white transition-colors page-link">Flights</a>
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                     <div class="space-y-8">
-                        <h4 class="text-[10px] font-black tracking-[0.5em] uppercase text-[#FF6B00]">The
+                        <h4 class="text-[10px] font-black tracking-[0.5em] uppercase text-[#FF8C00]">The
                             Bridge</h4>
                         <div class="flex flex-col gap-5 text-sm font-bold text-slate-400">
                             <a href="admin-login.html" class="hover:text-white transition-colors page-link">Officer
@@ -389,26 +389,13 @@
         //  CK TRAVELS — HOME MOTION SYSTEM v10
         // =========================================
 
-        // 1. Smooth Scrolling
-        const lenis = new Lenis();
-        function raf(time) { lenis.raf(time); requestAnimationFrame(raf); }
-        requestAnimationFrame(raf);
-
-        // 2. Register GSAP Plugins
-        gsap.registerPlugin(ScrollTrigger);
-
-        // 3. Page Specific Animations
         window.addEventListener('load', () => {
-            const tl = gsap.timeline();
-
-            // A) Hero text split & stagger
+            // A) Hero text split & stagger (Specific to Home)
             const h1 = document.getElementById('hero-title');
             if (h1) {
                 const text = h1.innerText;
-                h1.innerHTML = text.split('').map(c => `<span class="char">${c === ' ' ? '&nbsp;' : c}</span>`).join('');
-                // Note: Navbar entry is handled by main.js
-                // We add a slight delay to hero text to sync with nav
-                tl.from("#hero-title .char", { duration: 1.2, opacity: 0, y: 50, stagger: 0.04, ease: "expo.out", delay: 0.3 });
+                h1.innerHTML = text.split('').map(c => `<span class="char inline-block">${c === ' ' ? '&nbsp;' : c}</span>`).join('');
+                gsap.from("#hero-title .char", { duration: 1.2, opacity: 0, y: 50, stagger: 0.04, ease: "expo.out", delay: 0.3 });
             }
 
             // B) Infinite Logo Marquee
@@ -426,7 +413,6 @@
             if (!input) return;
             const query = input.value.trim();
             if (query) {
-                // navigateWithCurtain is now global in main.js
                 if (typeof navigateWithCurtain === 'function') {
                     navigateWithCurtain(`flights.html?query=${encodeURIComponent(query)}`);
                 } else {
