--- a/admin-bookings.html
+++ b/admin-bookings.html
@@ -28,8 +28,8 @@
         }
 
         .sidebar-item-active {
-            background: rgba(30, 64, 175, 0.2);
-            border-right: 4px solid #3b82f6;
+            background: rgba(0, 191, 255, 0.1);
+            border-right: 4px solid #00BFFF;
             color: #fff;
         }
 
@@ -43,7 +43,7 @@
         .booking-card:hover {
             transform: scale(1.01);
             background: rgba(30, 41, 59, 0.5);
-            border-color: rgba(30, 64, 175, 0.3);
+            border-color: rgba(0, 191, 255, 0.3);
             box-shadow: 0 30px 60px -10px rgba(0, 0, 0, 0.5);
         }
 
@@ -52,7 +52,7 @@
             position: fixed;
             inset: 0;
             z-index: -1;
-            background: radial-gradient(circle at 100% 0%, #1e3a8a 0%, transparent 40%),
+            background: radial-gradient(circle at 100% 0%, #00143D 0%, transparent 40%),
                 radial-gradient(circle at 0% 100%, #1e1b4b 0%, transparent 40%),
                 #020617;
         }
@@ -76,7 +76,7 @@
 
     <!-- Page Transition Curtain -->
     <div id="page-curtain"
-        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: #FF6B00; z-index: 9999;">
+        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: #FF8C00; z-index: 9999;">
     </div>
 
     <div class="bg-matrix"></div>
@@ -86,10 +86,10 @@
         <div class="p-10 mb-8">
             <div class="flex items-center gap-4 mb-3">
                 <div
-                    class="w-10 h-10 bg-brand rounded-2xl flex items-center justify-center font-black text-white text-sm tracking-tighter shadow-2xl shadow-brand/20">
+                    class="w-10 h-10 bg-[#FF8C00] rounded-2xl flex items-center justify-center font-black text-white text-sm tracking-tighter shadow-2xl shadow-[#FF8C00]/20">
                     CK</div>
-                <span class="text-white font-extrabold tracking-tighter text-xl uppercase italic">Station <span
-                        class="not-italic text-brand text-xs">C.</span></span>
+                <span class="text-white font-black tracking-tighter text-xl uppercase italic">Station <span
+                        class="not-italic text-[#FF8C00] text-xs">C.</span></span>
             </div>
             <div class="flex items-center gap-3">
                 <div class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></div>
@@ -157,7 +157,7 @@
             class="h-24 bg-slate-900/40 backdrop-blur-3xl border-b border-white/5 flex items-center justify-between px-16 sticky top-0 z-30">
             <div>
                 <h1 class="text-2xl font-black text-white tracking-tighter uppercase italic">Global <span
-                        class="not-italic text-brand text-xs">Logistics Nexus.</span></h1>
+                        class="not-italic text-[#FF8C00] text-xs">Logistics Nexus.</span></h1>
             </div>
             <div class="flex items-center gap-10">
                 <button onclick="fetchBookings()"
@@ -247,7 +247,7 @@
                 const timestamp = b.createdAt ? b.createdAt.toDate().toLocaleString() : 'N/A';
                 const card = `
                     <div class="booking-card rounded-[48px] p-10 flex flex-col md:flex-row items-center gap-10 opacity-0 transform translate-y-4">
-                        <div class="w-16 h-16 bg-brand/10 rounded-full flex items-center justify-center font-black text-brand text-xl border border-brand/20 shadow-xl shadow-brand/5">
+                        <div class="w-16 h-16 bg-[#FF8C00]/10 rounded-full flex items-center justify-center font-black text-[#FF8C00] text-xl border border-[#FF8C00]/20 shadow-xl shadow-[#FF8C00]/5">
                             ${b.customer.charAt(0).toUpperCase()}
                         </div>
                         
