--- a/flights.html
+++ b/flights.html
@@ -32,12 +32,12 @@
         }
 
         .glass-2:hover {
-            border-color: #FF6B00;
+            border-color: #FF8C00;
             box-shadow: 0 0 20px rgba(255, 107, 0, 0.3);
         }
 
         .btn-orange {
-            background-color: #FF6B00;
+            background-color: #FF8C00;
             color: white;
             transition: all 0.4s var(--ease-expo);
         }
@@ -53,7 +53,7 @@
             left: 100%;
             width: 100%;
             height: 100%;
-            background-color: #FF6B00;
+            background-color: #FF8C00;
             z-index: 9999;
             pointer-events: none;
         }
@@ -70,7 +70,7 @@
         }
 
         .airplane-icon {
-            fill: #FF6B00;
+            fill: #FF8C00;
         }
 
         .flight-card-inner {
@@ -171,7 +171,7 @@
                         <label class="block text-[10px] font-black text-slate-400 uppercase tracking-widest">Pricing
                             Ceiling</label>
                         <input type="range"
-                            class="w-full accent-[#FF6B00] bg-slate-100 h-1.5 rounded-full cursor-pointer">
+                            class="w-full accent-[#FF8C00] bg-slate-100 h-1.5 rounded-full cursor-pointer">
                     </div>
 
                     <div class="space-y-4">
@@ -180,7 +180,7 @@
                         <div class="space-y-5">
                             <label class="flex items-center gap-4 cursor-pointer group">
                                 <div
-                                    class="w-6 h-6 rounded-lg bg-orange-600/10 border border-orange-600/30 flex items-center justify-center text-[#FF6B00]">
+                                    class="w-6 h-6 rounded-lg bg-orange-600/10 border border-orange-600/30 flex items-center justify-center text-[#FF8C00]">
                                     <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path d="M5 13l4 4L19 7" stroke-width="4" />
                                     </svg>
@@ -211,7 +211,7 @@
                 <h2 class="text-6xl font-heading font-black italic text-[#00143D]">Live <span
                         class="not-italic text-slate-200">Inventory.</span></h2>
                 <span id="results-count"
-                    class="text-[10px] font-black text-[#FF6B00] tracking-[0.4em] uppercase">Authenticating
+                    class="text-[10px] font-black text-[#FF8C00] tracking-[0.4em] uppercase">Authenticating
                     Nodes...</span>
             </div>
 
@@ -233,7 +233,7 @@
                 </svg>
                 <span class="text-[8px] font-black uppercase tracking-widest">Home</span>
             </a>
-            <a href="flights.html" class="flex flex-col items-center gap-1 text-[#FF6B00] opacity-100">
+            <a href="flights.html" class="flex flex-col items-center gap-1 text-[#FF8C00] opacity-100">
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                     <path
                         d="M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z" />
@@ -258,12 +258,6 @@
     <script src="js/main.js"></script>
 
     <script>
-        gsap.registerPlugin(ScrollTrigger, MotionPathPlugin);
-
-        const lenis = new Lenis()
-        function raf(time) { lenis.raf(time); requestAnimationFrame(raf); }
-        requestAnimationFrame(raf);
-
         const firebaseConfig = {
             apiKey: "AIzaSyBsrtZh0PBOjNA8c8-9sifdtVqKMk7q-fs",
             authDomain: "ck-travels-8926e.firebaseapp.com",
@@ -290,7 +284,7 @@
 
                 container.innerHTML += `
                     <div id="${cardId}" class="stack-item">
-                        <div class="flight-card-inner shadow-[0_40px_100px_-20px_rgba(0,0,0,0.08)] group hover:border-[#FF6B00] transition-colors">
+                        <div class="flight-card-inner shadow-[0_40px_100px_-20px_rgba(0,0,0,0.08)] group hover:border-[#FF8C00] transition-colors">
                             <div class="flex flex-col md:flex-row items-center gap-16 relative">
                                 <!-- Logic Provider -->
                                 <div class="w-full md:w-48 text-center md:text-left">
