--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
 
         .input-glass:focus {
             background: rgba(255, 107, 0, 0.03);
-            border-color: #FF6B00;
+            border-color: #FF8C00;
             box-shadow: 0 0 30px rgba(255, 107, 0, 0.15);
             outline: none;
         }
@@ -64,12 +64,12 @@
         }
 
         .float-label.active {
-            color: #FF6B00 !important;
+            color: #FF8C00 !important;
             transform: translateY(-4px);
         }
 
         .btn-orange {
-            background-color: #FF6B00;
+            background-color: #FF8C00;
             color: white;
             transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
@@ -94,7 +94,7 @@
         .radar-ring {
             position: absolute;
             border-radius: 50%;
-            border: 1px solid rgba(255, 107, 0, 0.06);
+            border: 1px solid rgba(255, 140, 0, 0.06);
             animation: pulse-ring 4s ease-out infinite;
         }
 
@@ -115,7 +115,7 @@
             position: fixed;
             width: 2px;
             height: 2px;
-            background: rgba(255, 107, 0, 0.3);
+            background: rgba(255, 140, 0, 0.3);
             border-radius: 50%;
             pointer-events: none;
         }
@@ -127,7 +127,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background-color: #FF6B00;
+            background-color: #FF8C00;
             z-index: 9999;
             pointer-events: none;
         }
@@ -142,7 +142,7 @@
         }
 
         ::-webkit-scrollbar-thumb {
-            background: #FF6B00;
+            background: #FF8C00;
             border-radius: 10px;
         }
     </style>
@@ -206,8 +206,8 @@
         //  CK TRAVELS — LOGIN MOTION SYSTEM v10
         // =========================================
 
-        // A) Cinematic Login Card Entry (back.out bounce)
         window.addEventListener('load', () => {
+            // Cinematic Login Card Entry
             gsap.from('#login-card', {
                 scale: 0.8,
                 opacity: 0,
@@ -216,20 +216,8 @@
                 ease: 'back.out(1.7)'
             });
 
-            // Stagger inner elements
-            gsap.from('#login-card > *', {
-                opacity: 0,
-                y: 20,
-                stagger: 0.1,
-                duration: 0.8,
-                ease: 'power3.out',
-                delay: 0.4
-            });
-
             // Spawn floating particles
-            spawnParticles();
-
-            // Note: Magnetic buttons and page transitions are now handled by main.js
+            if (typeof spawnParticles === 'function') spawnParticles();
         });
 
         // B) Interactive Field Labels — Pop Up & Turn Orange on Focus
@@ -240,7 +228,7 @@
                 const label = group.querySelector('.float-label');
                 if (label) {
                     gsap.to(label, {
-                        color: '#FF6B00',
+                        color: '#FF8C00',
                         y: -4,
                         scale: 1.05,
                         duration: 0.3,
