--- a/packages.html
+++ b/packages.html
@@ -25,7 +25,7 @@
         }
 
         .glass-2:hover {
-            border-color: #FF6B00;
+            border-color: #FF8C00;
         }
 
         .pkg-card {
@@ -37,7 +37,7 @@
         }
 
         .btn-orange {
-            background-color: #FF6B00;
+            background-color: #FF8C00;
             color: white;
             transition: all 0.4s var(--ease-expo);
         }
@@ -52,7 +52,7 @@
             left: 100%;
             width: 100%;
             height: 100%;
-            background-color: #FF6B00;
+            background-color: #FF8C00;
             z-index: 9999;
             pointer-events: none;
         }
@@ -71,50 +71,56 @@
     </style>
 </head>
 
-<body class="bg-white font-body text-[#00143D] antialiased">
+<body class="bg-[#FFFAF0] font-body text-[#00143D] antialiased">
 
     <!-- Page Transition Curtain -->
     <div id="page-curtain"></div>
 
     <!-- Navigation -->
-    <nav id="main-nav" class="fixed top-0 w-full z-50 px-6 py-4 flex items-center justify-between">
+    <nav id="main-nav" class="fixed top-0 w-full z-50">
         <div id="nav-container"
-            class="max-w-7xl mx-auto w-full flex items-center justify-between px-10 py-5 rounded-[40px] transition-all duration-500">
-            <a href="index.html" class="flex items-center gap-1 group">
-                <span class="text-3xl font-black tracking-tighter italic text-[#00143D]">CK<span
-                        class="text-[#FF6B00] not-italic">.</span></span>
+            class="max-w-7xl mx-auto w-full flex items-center justify-between px-10 py-5 rounded-[40px]">
+            <a href="index.html" class="flex items-center gap-1 group page-link">
+                <span id="logo-span"
+                    class="text-3xl font-black tracking-tighter italic text-[#00BFFF] group-hover:text-[#FF8C00] transition-colors">CK<span
+                        class="text-[#FF8C00] not-italic">.</span></span>
             </a>
 
-            <div class="hidden lg:flex items-center gap-12 font-bold text-[11px] tracking-[0.3em] uppercase opacity-60">
-                <a href="index.html" class="hover:text-[#FF6B00] transition-colors">Home</a>
-                <a href="flights.html" class="hover:text-[#FF6B00] transition-colors">Flights</a>
-                <a href="packages.html" class="text-[#FF6B00]">Packages</a>
-                <a href="booking.html" class="hover:text-[#FF6B00] transition-colors">My Trips</a>
+            <div class="hidden lg:flex items-center gap-12 font-bold text-[11px] tracking-[0.3em] uppercase">
+                <a href="index.html"
+                    class="nav-link-text text-[#00BFFF]/60 hover:text-[#FF8C00] transition-colors page-link">Home</a>
+                <a href="flights.html"
+                    class="nav-link-text text-[#00BFFF]/60 hover:text-[#FF8C00] transition-colors page-link">Flights</a>
+                <a href="packages.html" class="nav-link-text text-[#FF8C00]">Packages</a>
+                <a href="booking.html"
+                    class="nav-link-text text-[#00BFFF]/60 hover:text-[#FF8C00] transition-colors page-link">My
+                    Trips</a>
             </div>
 
             <div class="flex items-center gap-6">
-                <a href="login.html" class="text-[11px] font-black tracking-[0.3em] uppercase text-[#00143D]">Member
-                    Link</a>
-                <a href="flights.html"
-                    class="btn-orange px-8 py-4 rounded-full text-[11px] font-black tracking-[0.3em] uppercase transition-all shadow-xl">Book
-                    Now</a>
+                <div class="magnetic-wrap">
+                    <a href="login.html"
+                        class="magnetic-btn btn-orange px-10 py-4 rounded-full text-[11px] font-black tracking-[0.3em] uppercase shadow-xl page-link">Login</a>
+                </div>
             </div>
         </div>
     </nav>
 
     <!-- Cinematic Header -->
-    <header class="pt-48 pb-24 relative overflow-hidden bg-[#00143D]">
+    <header class="pt-48 pb-24 relative overflow-hidden bg-[#FFFAF0]">
         <div class="max-w-7xl mx-auto px-6 relative z-10">
-            <div class="glass-2 p-16 rounded-[64px] reveal-up">
+            <div
+                class="bg-white/40 backdrop-blur-xl border border-[#00BFFF]/10 p-16 rounded-[64px] reveal-up shadow-[0_20px_50px_rgba(0,191,255,0.05)]">
                 <div class="max-w-4xl">
                     <div
-                        class="inline-flex items-center gap-3 bg-orange-600/10 text-[#FF6B00] px-5 py-2 rounded-full text-[9px] font-black tracking-[0.3em] mb-10 uppercase border border-orange-600/20">
+                        class="inline-flex items-center gap-3 bg-[#FF8C00]/10 text-[#FF8C00] px-5 py-2 rounded-full text-[9px] font-black tracking-[0.3em] mb-10 uppercase border border-[#FF8C00]/20">
                         Exclusive Nautical Portfolio
                     </div>
-                    <h1 class="text-6xl md:text-[100px] font-heading font-black text-white leading-[0.9] italic mb-10">
-                        Nautical <span class="not-italic text-[#FF6B00] font-bold">Experiences.</span>
+                    <h1
+                        class="text-6xl md:text-[100px] font-heading font-black text-[#00143D] leading-[0.9] italic mb-10">
+                        Nautical <span class="not-italic text-[#00BFFF] font-bold">Experiences.</span>
                     </h1>
-                    <p class="text-xl text-slate-400 leading-relaxed font-medium max-w-2xl">
+                    <p class="text-xl text-[#00143D]/40 leading-relaxed font-medium max-w-2xl">
                         Hand-selected deployments that redefine the standard of maritime and aerial luxury. Synchronized
                         routes for the high-end traveler.
                     </p>
@@ -123,44 +129,46 @@
                 <!-- Region Matrix -->
                 <div class="flex gap-4 mt-16 overflow-x-auto no-scrollbar pb-4">
                     <button
-                        class="px-10 py-5 rounded-full bg-[#FF6B00] text-white text-[9px] font-black tracking-[0.3em] uppercase shadow-2xl">Global
+                        class="px-10 py-5 rounded-full bg-[#FF8C00] text-white text-[9px] font-black tracking-[0.3em] uppercase shadow-2xl">Global
                         Collective</button>
                     <button
-                        class="px-10 py-5 rounded-full bg-white/5 border border-white/5 text-slate-400 hover:text-white hover:bg-white/10 text-[9px] font-black tracking-[0.3em] uppercase transition-all">European
+                        class="px-10 py-5 rounded-full bg-[#00143D]/5 border border-[#00143D]/5 text-[#00143D]/40 hover:text-[#00143D] hover:bg-[#00143D]/10 text-[9px] font-black tracking-[0.3em] uppercase transition-all">European
                         Node</button>
                     <button
-                        class="px-10 py-5 rounded-full bg-white/5 border border-white/5 text-slate-400 hover:text-white hover:bg-white/10 text-[9px] font-black tracking-[0.3em] uppercase transition-all">Asian
+                        class="px-10 py-5 rounded-full bg-[#00143D]/5 border border-[#00143D]/5 text-[#00143D]/40 hover:text-[#00143D] hover:bg-[#00143D]/10 text-[9px] font-black tracking-[0.3em] uppercase transition-all">Asian
                         Sector</button>
                 </div>
             </div>
         </div>
-
-        <!-- Decoration -->
-        <div
-            class="absolute top-0 right-0 w-[800px] h-[800px] bg-orange-600/10 rounded-full blur-[160px] -mr-[400px] -mt-[400px] opacity-30">
-        </div>
+    </header> <!-- Decoration -->
+    <div
+        class="absolute top-0 right-0 w-[800px] h-[800px] bg-orange-600/10 rounded-full blur-[160px] -mr-[400px] -mt-[400px] opacity-30">
+    </div>
     </header>
 
     <!-- Experience Stream -->
     <main class="max-w-7xl mx-auto px-6 py-40">
         <div id="packages-container" class="bento-pkg-grid">
             <!-- Loading States -->
-            <div class="glass-2 h-[500px] rounded-[48px] animate-pulse"></div>
-            <div class="glass-2 h-[500px] rounded-[48px] animate-pulse"></div>
-            <div class="glass-2 h-[500px] rounded-[48px] animate-pulse"></div>
+            <div class="bg-white/40 backdrop-blur-xl border border-[#00BFFF]/10 h-[500px] rounded-[48px] animate-pulse">
+            </div>
+            <div class="bg-white/40 backdrop-blur-xl border border-[#00BFFF]/10 h-[500px] rounded-[48px] animate-pulse">
+            </div>
+            <div class="bg-white/40 backdrop-blur-xl border border-[#00BFFF]/10 h-[500px] rounded-[48px] animate-pulse">
+            </div>
         </div>
     </main>
 
     <!-- Footer -->
-    <footer class="bg-[#00143D] py-40">
+    <footer class="bg-[#FFFAF0] py-40 border-t border-[#00BFFF]/5">
         <div class="max-w-7xl mx-auto px-6 text-center">
-            <p class="text-[10px] font-black tracking-[0.6em] text-slate-700 uppercase mb-20">© 2026 CK TRAVELS //
-                STN_NAUTICAL_SYNC</p>
+            <p class="text-[10px] font-black tracking-[0.6em] text-[#00143D]/20 uppercase mb-20">© 2026 CK TRAVELS //
+                STN_SKY_LUX_SYNC</p>
         </div>
     </footer>
 
     <!-- Mobile Nav -->
-    <div class="lg:hidden fixed bottom-0 w-full z-50 px-6 pb-8 pt-4 mobile-tab-bar text-white">
+    <div class="lg:hidden fixed bottom-0 w-full z-50 px-6 pb-8 pt-4 mobile-tab-bar text-[#00143D]">
         <div class="flex justify-between items-center opacity-40">
             <a href="index.html" class="flex flex-col items-center gap-1">
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
@@ -175,7 +183,7 @@
                 </svg>
                 <span class="text-[8px] font-black uppercase tracking-widest">Flights</span>
             </a>
-            <a href="packages.html" class="flex flex-col items-center gap-1 text-[#FF6B00] opacity-100">
+            <a href="packages.html" class="flex flex-col items-center gap-1 text-[#FF8C00] opacity-100">
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
                     <path d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
@@ -190,10 +198,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
     <script>
-        const lenis = new Lenis()
-        function raf(time) { lenis.raf(time); requestAnimationFrame(raf); }
-        requestAnimationFrame(raf);
-
         const firebaseConfig = {
             apiKey: "AIzaSyBsrtZh0PBOjNA8c8-9sifdtVqKMk7q-fs",
             authDomain: "ck-travels-8926e.firebaseapp.com",
@@ -214,28 +218,30 @@
             qs.forEach(doc => {
                 const p = doc.data();
                 container.innerHTML += `
-                    <div class="bg-white rounded-[48px] pkg-card overflow-hidden group cursor-pointer border border-slate-100 shadow-sm relative reveal-up" onclick="window.location.href='package-details.html?id=${doc.id}'">
+                    <div class="bg-white rounded-[48px] pkg-card overflow-hidden group cursor-pointer border border-[#00BFFF]/5 shadow-[0_20px_60px_rgba(0,191,255,0.05)] relative reveal-up" onclick="window.location.href='package-details.html?id=${doc.id}'">
                         <div class="h-[480px] relative overflow-hidden">
-                            <img src="${p.image}" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-[2s]" alt="${p.title}">
-                            <div class="absolute inset-0 bg-gradient-to-t from-[#00143D] via-transparent to-transparent"></div>
+                            <img src="${p.image}" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-[2.4s]" alt="${p.title}">
+                            <div class="absolute inset-0 bg-gradient-to-t from-[#00143D]/60 via-transparent to-transparent"></div>
                             
                             <div class="absolute top-10 left-10">
-                                <span class="bg-orange-600/20 backdrop-blur-md px-5 py-2 rounded-full text-[9px] font-black text-white uppercase tracking-[0.2em] border border-orange-600/30">
+                                <span class="bg-[#FF8C00]/20 backdrop-blur-md px-5 py-2 rounded-full text-[9px] font-black text-white uppercase tracking-[0.2em] border border-[#FF8C00]/30">
                                     ${p.location}
                                 </span>
                             </div>
 
                             <div class="absolute bottom-12 left-12 right-12">
-                                <div class="text-[10px] font-black text-[#FF6B00] uppercase tracking-[0.4em] mb-4">${p.duration} Deployment</div>
+                                <div class="text-[10px] font-black text-[#FF8C00] uppercase tracking-[0.4em] mb-4">${p.duration} Deployment</div>
                                 <h3 class="text-4xl font-heading font-black text-white italic mb-10 leading-tight">${p.title}</h3>
                                 
                                 <div class="flex justify-between items-end border-t border-white/10 pt-10">
                                     <div>
-                                        <div class="text-[9px] text-slate-500 font-bold uppercase tracking-widest mb-1">Passage Starts</div>
+                                        <div class="text-[9px] text-white/50 font-bold uppercase tracking-widest mb-1">Passage Starts</div>
                                         <div class="text-4xl font-black text-white italic">$${p.price.toLocaleString()}</div>
                                     </div>
-                                    <div class="w-16 h-16 bg-[#FF6B00] text-white rounded-[24px] flex items-center justify-center shadow-2xl transition-all group-hover:scale-110 active:scale-95">
-                                        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M17 8l4 4m0 0l-4 4m4-4H3" stroke-width="3"/></svg>
+                                    <div class="magnetic-wrap">
+                                        <div class="magnetic-btn w-16 h-16 bg-[#FF8C00] text-white rounded-[24px] flex items-center justify-center shadow-2xl transition-all group-hover:scale-110 active:scale-95">
+                                            <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M17 8l4 4m0 0l-4 4m4-4H3" stroke-width="3"/></svg>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -251,65 +257,17 @@
                 duration: 1.5,
                 ease: "expo.out"
             });
+
+            // Re-init magnetic buttons after injection
+            if (typeof initMagneticButtons === 'function') initMagneticButtons();
         });
 
-        window.addEventListener('load', () => {
-            gsap.from(".reveal-up", { y: 40, opacity: 0, duration: 1.2, ease: "power4.out" });
-
-            // Navbar Entrance
-            gsap.to("#main-nav", {
-                y: 0,
-                opacity: 1,
-                duration: 1.2,
-                ease: "expo.out"
-            });
-
-            // Curtain Entry
-            gsap.to("#page-curtain", { left: "-100%", duration: 1.2, ease: "expo.inOut" });
-
-            // Navbar Scroll Transformation
-            ScrollTrigger.create({
-                start: "top -50",
-                onEnter: () => {
-                    gsap.to("#nav-container", {
-                        backgroundColor: "rgba(255, 255, 255, 0.1)",
-                        backdropFilter: "blur(25px)",
-                        border: "1px solid rgba(255, 255, 255, 0.1)",
-                        boxShadow: "0 20px 40px rgba(0,0,0,0.1)",
-                        padding: "16px 40px",
-                        marginTop: "16px",
-                        duration: 0.5,
-                        ease: "power2.out"
-                    });
-                },
-                onLeaveBack: () => {
-                    gsap.to("#nav-container", {
-                        backgroundColor: "transparent",
-                        backdropFilter: "blur(0px)",
-                        border: "1px solid transparent",
-                        boxShadow: "none",
-                        padding: "20px 0px",
-                        marginTop: "0px",
-                        duration: 0.5,
-                        ease: "power2.out"
-                    });
-                }
-            });
-
-            // Exit back to Home
-            document.querySelectorAll('a[href="index.html"]').forEach(link => {
-                link.addEventListener('click', (e) => {
-                    e.preventDefault();
-                    gsap.to("#page-curtain", {
-                        left: 0,
-                        duration: 1,
-                        ease: "expo.inOut",
-                        onComplete: () => window.location.href = link.getAttribute('href')
-                    });
-                });
-            });
-        });
+        // The window.load here is replaced by main.js logic
+        // But we keep the Firebase part for the specific data fetching
     </script>
+
+    <!-- Unified Logic -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
